fixed styles on mobile

--- a/src/components/base/Navigation/Navigation.module.scss
+++ b/src/components/base/Navigation/Navigation.module.scss
@@ -27,7 +27,7 @@
 
 .link {
   display: block;
-  padding: 12px;
+  padding: 8px;
   border: 1px solid #fff;
   border-radius: 12px;
   text-align: center;
@@ -52,13 +52,14 @@
   }
 
   &:first-child {
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     &:after {
       content: '';
       position: absolute;
       width: 100%;
       left: 0;
       right: 0;
+      display: none;
       bottom: -8px;
       height: 1px;
       background-color: #ECF5ED;
@@ -66,10 +67,11 @@
   }
 
   &:last-child {
-    margin-top: 16px;
+    // margin-top: 16px;
     &:before {
       content: '';
       position: absolute;
+      display: none;
       width: 100%;
       left: 0;
       right: 0;
@@ -85,12 +87,14 @@
 
   @include mediaLg {
     margin: 0 0 16px;
+    padding: 12px;
 
     &:first-child {
       margin: 0 0 33px;
 
       &:after {
         bottom: -18px;
+        display: block;
       }
     }
 
@@ -99,6 +103,7 @@
 
       &:before {
         top: -18px;
+        display: block;
       }
     }
   }
