--- a/src/components/modules/BarChart/BarChart.module.scss
+++ b/src/components/modules/BarChart/BarChart.module.scss
@@ -3,11 +3,16 @@
 .barchart {
   display: flex;
   flex-direction: column;
+  gap: 15px;
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 15px;
   background-color: $color-white;
   border-radius: 32px;
+
+  @include mediaMd {
+    padding: 20px;
+  }
 }
 
 .title {
@@ -42,6 +47,14 @@
   align-items: flex-end;
   text-align: right;
   direction: rtl;
+
+  @media (max-width: $bp-sm) {
+    row-gap: 10px;
+  }
+
+  @media (max-width: $bp-lg) and (orientation: landscape) {
+    row-gap: 10px;
+  }
 }
 
 .yField {
